--- a/examples/fineFoods/admin/mui/public/locales/en.json
+++ b/examples/fineFoods/admin/mui/public/locales/en.json
@@ -1,14 +1,62 @@
 {
     "pages": {
         "login": {
+            "title": "Sign in to your account",
             "signin": "Sign in",
             "signup": "Sign up",
-            "email": "Username",
-            "password": "Password",
-            "remember": "Remember me",
-            "forgotPassword": "Forgot?",
-            "noAccount": "Don’t have an account?",
-            "message": "<0>Sign in</0> your account"
+            "divider": "or",
+            "fields": {
+                "email": "Email",
+                "password": "Password"
+            },
+            "errors": {
+                "validEmail": "Invalid email address"
+            },
+            "buttons": {
+                "submit": "Login",
+                "forgotPassword": "Forgot password?",
+                "noAccount": "Don’t have an account?",
+                "rememberMe": "Remember me"
+            }
+        },
+        "forgotPassword": {
+            "title": "Forgot your password?",
+            "fields": {
+                "email": "Email"
+            },
+            "errors": {
+                "validEmail": "Invalid email address"
+            },
+            "buttons": {
+                "submit": "Send reset instructions"
+            }
+        },
+        "register": {
+            "title": "Sign up for your account",
+            "fields": {
+                "email": "Email",
+                "password": "Password"
+            },
+            "errors": {
+                "validEmail": "Invalid email address"
+            },
+            "buttons": {
+                "submit": "Register",
+                "haveAccount": "Have an account?"
+            }
+        },
+        "updatePassword": {
+            "title": "Update password",
+            "fields": {
+                "password": "New Password",
+                "confirmPassword": "Confirm new password"
+            },
+            "errors": {
+                "confirmPasswordNotMatch": "Passwords do not match"
+            },
+            "buttons": {
+                "submit": "Update"
+            }
         },
         "error": {
             "info": "You may have forgotten to add the {{action}} component to {{resource}} resource.",
