docs(blog): fix pnpm blog typo

--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -15,7 +15,7 @@ import image4 from '@site/static/img/blog/2022-10-13-pnpm-post/pnpm-image-4.png'
 
 
 ## Introduction
-A package manager is responsible for installing, updating, and removing software packages and dependencies. NPM has been widely used as the standard package manager for Javascript; however, companies are quickly adopting the pnpm package manager due to its immense benefits.  
+A package manager is responsible for installing, updating, and removing software packages and dependencies. NPM has been widely used as the standard package manager for Javascript; however, companies are quickly adopting the **pnpm package manager** due to its immense benefits.  
 
 Steps we'll cover:
 - [What is pnpm?](#what-is-pnpm)
@@ -101,16 +101,16 @@ Pnpm, like yarn, has a special file with the checksum of all the installed packa
 
 In terms of unprivileged access, pnpm also outperforms npm and yarn. In the case of npm and yarn, If package A depends on package B, and B depends on C, then A implicitly gets access to C even though A has not declared C as its dependency. This problem is intensified in a large monorepo setup. Pnpm, on the other hand, uses a different dependency resolution algorithm and different folder structure of  ```node_modules``` that prevents illegal access to packages. 
 
-Note that pnpm has excellent support for monrepo and offline mode. 
+Note that pnpm has excellent support for monorepo and offline mode. 
 ## pnpm CLI
 Pnpm has a cool CLI. Here are some of the basic commands:
 
-- Create a package.json file ```pnpm init```
-- Download all the packages listed as dependencies in package.json ``` pnpm install```
-- Download a particular version of a package and add to the list of dependencies in package.json ``` pnpm add [module_name]@[version]```
-- Uninstall and remove a package from the list of dependencies in package.json ``` pnpm remove [module_name]```
-- Print a tree of locally installed modules ```pnpm list```
-- 
+- `pnpm init`: Create a package.json file 
+- `pnpm install`: Download all the packages listed as dependencies in package.json 
+- `pnpm add [module_name]@[version]`: Download a particular version of a package and add to the list of dependencies in package.json 
+- `pnpm remove [module_name]`: Uninstall and remove a package from the list of dependencies in `package.json` 
+- `pnpm list`: Print a tree of locally installed modules 
+  
 ## Migrating from NPM/Yarn to PNPM
 If your projects use npm or yarn, then migrating to pnpm will not be very difficult. Here is a comparison of commands between npm, yarn, and pnpm. 
 
