docs(blog): add new banner to next posts

--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -143,8 +143,8 @@ As shown in the above benchmark results, pnpm has overall performed much better 
 
 ---
 
-<div style={{backgroundColor:"#F8F8F8", padding:"18px", borderRadius:"10px"}}>
-<div style={{fontSize:"32px", fontWeight:"700", lineHeight:"1.4", marginBottom:"25px"}} >Stop wasting your time copy/pasting your table code all over your application!</div >
+<div className="banner-container">
+<div className="banner-header" >Stop wasting your time copy/pasting your table code all over your application!</div >
 
 
 
