docs: fix CodeSandbox embeds

--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -233,12 +233,12 @@ The Base64 file upload process with **refine** is very simple. How to use it is 
 
 [View Source](https://github.com/pankod/refine/tree/master/examples/upload/base64Upload)
 
-## Refine Base64 Upload Live Codesandbox Example
-<iframe src="https://codesandbox.io/embed/github/pankod/refine/tree/master/examples/upload/antd/base64?autoresize=1&fontsize=14&theme=dark&view=preview"
-    style={{width: "100%", height:"80vh", border: "0px", borderRadius: "8px", overflow:"hidden"}}
-    title="refine-base64-upload-example"
-    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+## Refine Base64 Upload Live StackBlitz Example
+
+<iframe src="https://stackblitz.com/github/pankod/refine/tree/master/examples/upload/antd/base64/?embed=1&view=preview&theme=dark&preset=node&ctl=1"
+     style={{width: "100%", height:"80vh", border: "0px", borderRadius: "8px", overflow:"hidden"}}
+     title="refine-base64-upload-example"
+     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
 ></iframe>
-
-
+ 
