docs(blog): add react context post

--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -42,7 +42,7 @@ Npm uses flattened ```node_modules```. The flattened dependency results in many 
 
 Let’s explain this with a basic example. One of your projects needs an express module, and express has a dependency package named “debug”. This is how the structure of node modules will look like:
 
-<div style={{display: "flex", flexDirection: "column", alignItems:"center"}}  >
+<div className="centered-image"  >
    <img style={{alignSelf:"center", width:"300px"}}  src={image1}  alt="pnpm vs yarn" />
 <em> Figure 1 - Example project dependencies</em>
 </div>
@@ -63,7 +63,7 @@ Let’s see the pnpm version of the express and node modules discussed in the pr
 
 <br/>
 
-<div style={{display: "flex", flexDirection: "column", alignItems:"center"}} >
+<div className="centered-image" >
    <img style={{alignSelf:"center", width:"400px"}}  src={image2}  alt="pnpm vs npm" />
 	<div><em> Figure 2 - project structure with pnpm</em></div>
 </div>
@@ -76,7 +76,7 @@ If you look at ```express/4.0.0```, the ```express``` module is a hard link to t
  Below is the image of the actual pnpm-store, which contains the packages. This is where all the downloaded dependencies are maintained. When you download a dependency, pnpm first checks whether the dependency is present in this store or not. If it finds the dependency in the store, pnpm fetches it by creating a hard link. 
 
 
-<div style={{display: "flex", flexDirection: "column", alignItems:"center"}}  >
+<div className="centered-image"  >
    <img style={{alignSelf:"center", width:"400px"}}  src={image3}  alt="pnpm" />
 <em> Figure 3 - Global pnpm store</em>
 </div>
@@ -90,7 +90,7 @@ pnpm provides many advantages over npm and yarn. Some of the core features inclu
 As shown in the previous section, pnpm uses a content-addressable file system to store the packages and dependencies on the disk. That means the same package will not be duplicated. Even with different versions of the same package, pnpm is intelligent enough to reuse the maximum code. If a package version 1 has 500 files and version 2 has just one more file, then pnpm will not write 501 files for version 2; instead, it will create a hard link to the original 500 files and write just the new file. If you compare it with npm, then version 2 will also be loaded with duplicating the original 500 files. For large monorepo projects, it can make a big difference. Image a scenario where a package is needed by hundreds of other packages that will be killing your disk space unless you use pnpm. 
 ### Improved speed
 The speed of package installation with pnpm is significantly better than npm and yarn. If you look at the below benchmark tests, you can see that pnpm performs better in most cases thano npm and yarn. 
-<div style={{display: "flex", flexDirection: "column", alignItems:"center"}}  >
+<div className="centered-image"  >
    <img style={{alignSelf:"center"}}  src={image4}  alt="pnpm speed" />
 <em> source - https://pnpm.io/benchmarks</em>
 </div>
