--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -208,24 +208,11 @@ Here we take data in file format and encode it as Base64. Then we show this enco
 <br/>
 <br/>
 
-## Are You Looking React Web Framework?
-A React-based framework for building internal tools, rapidly. **refine** offers lots of out-of-the box functionality for rapid development, without compromising extreme customizability. Use-cases include, but are not limited to admin panels, B2B applications and dashboards.
+---
 
-🔥 **Headless** : Works with any UI framework
+<PromotionBanner title="Does your CRUD app need server state management?" image="/img/generic_banner.png" />
 
-⚙️ Zero-configuration: One-line setup with superplate. It takes less than a minute to start a project.
-
-📦 Out-of-the-box : Routing, networking, authentication, state management, i18n and UI.
-
-🔌 Backend Agnostic : Connects to any custom backend. Built-in support for REST API, Strapi, NestJs CRUD, Hasura, Nhost, Airtable, Medusa, Supabase, Appwrite and Altogic.
-
-📝 Native Typescript Core : You can always opt-out for plain JavaScript.
-
-🐜 Enterprise UI : Works seamlessly with Ant Design System. (Support for multiple UI frameworks is on the Roadmap)
-
-📝 Boilerplate-free Code : Keeps your codebase clean and readable.
-
-[Refer to the **refine** documentation for more information. →](https://refine.dev/docs/getting-started/overview/) 
+---
 ## How to Base64 Upload with Refine?
 The Base64 file upload process with **refine** is very simple. How to use it is explained step by step in the guide and example. 
 
