docs(blog): add some post

--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -84,6 +84,14 @@ If you look at ```express/4.0.0```, the ```express``` module is a hard link to t
 <br/>
 
 Because of this approach, pnpm re-uses the same packages if they are already installed for another project. This brings us to the many benefits which pnpm provides. Let’s discuss some of those. 
+
+
+---
+
+<PromotionBanner title="Backend devs love this React framework!" image="/img/generic_banner.png" />
+
+---
+
 ## Advantages of pnpm
 pnpm provides many advantages over npm and yarn. Some of the core features include:
 ### Disk space efficiency
@@ -111,6 +119,13 @@ Pnpm has a cool CLI. Here are some of the basic commands:
 - `pnpm remove [module_name]`: Uninstall and remove a package from the list of dependencies in `package.json` 
 - `pnpm list`: Print a tree of locally installed modules 
   
+  <br/>
+<div>
+<a href="https://discord.gg/refine">
+  <img  src="/img/discord_big_blue.png" alt="discord banner" />
+</a>
+</div>
+
 ## Migrating from NPM/Yarn to PNPM
 If your projects use npm or yarn, then migrating to pnpm will not be very difficult. Here is a comparison of commands between npm, yarn, and pnpm. 
 
@@ -132,41 +147,7 @@ Pnpm is “performant” version of npm, hence the name pnpm. This article showe
 
 As shown in the above benchmark results, pnpm has overall performed much better than npm and yarn. No wonder giant tech companies like Vue3, Prism, and Microsoft are quickly adopting pnpm. 
 
-<br/>
-<div>
-<a href="https://discord.gg/refine">
-  <img  src="/img/discord_big_blue.png" alt="discord banner" />
-</a>
-</div>
 
 
 
----
 
-<div className="banner-container">
-<div className="banner-header" >Stop wasting your time copy/pasting your table code all over your application!</div >
-
-
-
-Meet the headless, React-based solution to build sleek **CRUD** applications. With refine, you can be confident that your codebase will always stay clean and boilerplate-free.
-
-Try [refine](https://github.com/refinedev/refine) to rapidly build your next **CRUD** project, whether it's an admin panel, dashboard, internal tool or storefront.
-
-    
-
-<div>
-<a href="https://github.com/refinedev/refine">
-   <img  src="/img/generic_banner.png" alt="refine blog logo" /> 
-</a>
-</div>
-
-<br/>
-
-
-**refine** is an open-source, React-based framework for building CRUD applications without constraints. It’s headless by design and seamlessly works with **any custom design** or **UI framework** you favor. For convenience, it ships with ready-made integrations for **Ant Design System, Material UI and Mantine UI**.
-
-It can **speed up your development time up to 3X** without compromising freedom on styling, customization and project workflow.
-
-Visit [refine GitHub repository](https://github.com/refinedev/refine) for more information, demos, tutorials, and example projects.
-
-</div>
