docs(blog): update banners

--- a/documentation/blog/2022-09-09-react-18.md
+++ b/documentation/blog/2022-09-09-react-18.md
@@ -109,14 +109,6 @@ You will also notice the error below in your console:
 
 - Memory consumption: React 17 and earlier had issues with memory leaks, especially in unmounted components.
 
-<br/>
-<div>
-<a href="https://github.com/refinedev/refine">
-  <img  src="https://refine.dev/img/github-support-banner.png" alt="github support banner" />
-</a>
-</div>
-
-<br/>
 
 # What changed in React 18
 More emphasis is made on application concurrency in React 18. This idea includes functions such as Automatic Batching, Transition, and Suspense, as well as APIs like createRoot, hydrateRoot, renderToPipeableStream, and renderToReadableStream. It also includes hooks such as useId, useTransition, useDeferredValue, useSyncExternalStore, and useInsertionEffect, as well as updates on Strict Mode and the deprecation of `ReactDOM.render` and `renderToString`.
@@ -183,6 +175,12 @@ const app = document.getElementById('app');
 const root = hydrateRoot(app, <App tab="home" />);
 ```
 
+
+---
+
+<PromotionBanner title="Tired of looking for the best template for your B2B app?" image="/img/diagram.png" />
+
+---
 
 ## Render Callback
 You could pass a callback function when rendering the root component so that it would execute after the component renders or updates. 
@@ -288,6 +286,14 @@ In the code snippet, instead of using `setTimeout()` which will delay state upda
 Unlike `setTimeout`, `startTransition` updates can be interrupted, can track a pending update, and it executes immediately.
 ## Dropped support for Internet Explorer
 The React community has also dropped support for Internet Explorer which means that only browser feature up until React 17 will work on Internet Explorer. Modern browser features such as multitasks, `Promise`, `Object.assign` or `Symbol`  won’t be pollyfilled in Internet Explorer.
+
+<br/>
+<div>
+<a href="https://discord.gg/refine">
+  <img  src="/img/discord_big_blue.png" alt="discord banner" />
+</a>
+</div>
+
 # Benefits of React 18 over React 17
 Even after learning the **differences between React 17 and React 18**, you may still be unsure about switching to React 18 or sticking with React 17. 
 
@@ -301,33 +307,3 @@ You should be able to update your React version and refactor your codebases to s
 
 To get the most recent information on changes and new releases, you should also keep a close eye on the React library changelogs for updates and stay in touch with the React community.
 
-<br/>
-<div>
-<a href="https://discord.gg/refine">
-  <img  src="https://refine.dev/img/discord-banner.png" alt="discord banner" />
-</a>
-</div>
-
----
-
-## Build your React-based CRUD applications without constraints
-
-Low-code React frameworks are great for gaining development speed but they often fall short of flexibility if you need extensive styling and customization for your project.
-
-Check out [refine](https://github.com/refinedev/refine),if you are interested in a headless framework you can use with any custom design or UI-Kit for 100% control over styling.
-
-
-<div>
-<a href="https://github.com/refinedev/refine">
-    <img  src="https://refine.dev/img/refine_blog_logo_1.png" alt="refine blog logo" />
-</a>
-</div>
-
-<br/>
-
-**refine** is an open-source React-based framework for building CRUD applications **without constraints.**
-It can speed up your development time up to **3X** without compromising freedom on **styling**, **customization** and **project workflow.**
-
-**refine** is headless by design and it connects **30+** backend services out-of-the-box including custom REST and GraphQL API’s.
-
-Visit [refine GitHub repository](https://github.com/refinedev/refine) for more information, demos, tutorials, and example projects.
