docs(blog): change banner positions

--- a/documentation/blog/2022-08-24-mui-icons.md
+++ b/documentation/blog/2022-08-24-mui-icons.md
@@ -231,12 +231,14 @@ Here’s the result:
 
 <br/>
 
-<br/>
-<div>
-<a href="https://github.com/refinedev/refine">
-  <img  src="https://refine.dev/img/github-support-banner.png" alt="github support banner" />
-</a>
-</div>
+
+
+
+---
+
+<PromotionBanner title="Small dev teams love this React framework!" image="/img/mui_banner.png" />
+
+---
 
 ## SvgIcon API
 For cases where you may need a custom SVG icon that is not readily available in the Material icon specifications, you can use the `SvgIcon` wrapper. This component is an extension of the native `<svg>` element:
@@ -431,6 +433,12 @@ Here’s the `Form` component:
 
 <br/>
 
+<br/>
+<div>
+<a href="https://discord.gg/refine">
+  <img  src="/img/discord_big_blue.png" alt="discord banner" />
+</a>
+</div>
 
 ### The Task Component
 This component displays the user interface and functionalities within the individual tasks that the user specifies. You can delete tasks from the Material UI by clicking the `DeleteIcon.` By clicking the `CheckCircleIcon` from Material UI, you can mark a "todo" as "completed." 
@@ -567,38 +575,4 @@ You can access the source code on [Github Repo](https://github.com/refinedev/tas
 
 You can also see the deployed application [here](https://task-manager-with-react.vercel.app/).   
 
-<br/>
-<div>
-<a href="https://discord.gg/refine">
-  <img  src="/img/discord_big_blue.png" alt="discord banner" />
-</a>
-</div>
 
----
-<div style={{backgroundColor:"#F8F8F8", padding:"18px", borderRadius:"10px"}}>
-<div style={{fontSize:"32px", fontWeight:"700", lineHeight:"1.4", marginBottom:"25px"}} >Stop wasting your time copy/pasting your form code all over your application!</div >
-
-
-
-Meet the headless, React-based solution to build sleek **CRUD** applications. With refine, you can be confident that your codebase will always stay clean and boilerplate-free.
-
-Try [refine](https://github.com/refinedev/refine) to rapidly build your next **CRUD** project, whether it's an admin panel, dashboard, internal tool or storefront.
-
-    
-
-<div>
-<a href="https://github.com/refinedev/refine">
-   <img  src="/img/mui_banner.png" alt="refine blog logo" /> 
-</a>
-</div>
-
-<br/>
-
-
-**refine** is an open-source, React-based framework for building CRUD applications without constraints. It’s headless by design and seamlessly works with **any custom design** or **UI framework** you favor. For convenience, it ships with ready-made integrations for **Ant Design System, Material UI and Mantine UI**.
-
-It can **speed up your development time up to 3X** without compromising freedom on styling, customization and project workflow.
-
-Visit [refine GitHub repository](https://github.com/refinedev/refine) for more information, demos, tutorials, and example projects.
-
-</div>
