--- a/documentation/blog/2022-09-04-next-link.md
+++ b/documentation/blog/2022-09-04-next-link.md
@@ -73,6 +73,12 @@ function Home () {
 export default Home
 ```
 
+---
+
+<PromotionBanner title="Not confident with your frontend skills?" image="/img/generic_banner.png" />
+
+---
+
 ## The Link component props 
 
 ### **Required props**
@@ -304,10 +310,11 @@ Preloading page content can drastically improve application performance. The `pr
 
 <br/>
 <div>
-<a href="https://github.com/refinedev/refine">
-  <img  src="https://refine.dev/img/github-support-banner.png" alt="github support banner" />
+<a href="https://discord.gg/refine">
+  <img  src="/img/discord_big_blue.png" alt="discord banner" />
 </a>
 </div>
+
 
 ### `replace`
 
@@ -446,41 +453,5 @@ The **Next.js Link** component simplifies client-side navigation, and we recomme
 We hope you found this article useful in getting started with next/link and client-side navigation in next.js. You can read the **Next.js Link** component docs [here](https://nextjs.org/docs/api-reference/next/link) for references and additional information.
 
 
-<br/>
-<div>
-<a href="https://discord.gg/refine">
-  <img  src="/img/discord_big_blue.png" alt="discord banner" />
-</a>
-</div>
 
 
-
----
-
-<div className="banner-container">
-<div className="banner-header" >Stop wasting your time copy/pasting your table code all over your application!</div >
-
-
-
-Meet the headless, React-based solution to build sleek **CRUD** applications. With refine, you can be confident that your codebase will always stay clean and boilerplate-free.
-
-Try [refine](https://github.com/refinedev/refine) to rapidly build your next **CRUD** project, whether it's an admin panel, dashboard, internal tool or storefront.
-
-    
-
-<div>
-<a href="https://github.com/refinedev/refine">
-   <img  src="/img/generic_banner.png" alt="refine blog logo" /> 
-</a>
-</div>
-
-<br/>
-
-
-**refine** is an open-source, React-based framework for building CRUD applications without constraints. It’s headless by design and seamlessly works with **any custom design** or **UI framework** you favor. For convenience, it ships with ready-made integrations for **Ant Design System, Material UI and Mantine UI**.
-
-It can **speed up your development time up to 3X** without compromising freedom on styling, customization and project workflow.
-
-Visit [refine GitHub repository](https://github.com/refinedev/refine) for more information, demos, tutorials, and example projects.
-
-</div>
