docs: blog typo fix

--- a/documentation/blog/2022-11-03-esbuild.md
+++ b/documentation/blog/2022-11-03-esbuild.md
@@ -163,7 +163,7 @@ What esbuild does here is that it bundles your application into ```bundle.js```,
 For TypeScript-based projects in production, you can take advantage of using [tsup](https://github.com/egoist/tsup). 
 
 Using tsup you can build your TypeScript applications with minimal configuration.  
-It uses **esbuild** behind the scene so you get the power of esbuild along with the convenience of tsup. We, at refine, have seen remarkable performance using tsup in our projects running in production environment. 
+It uses **esbuild** behind the scene so you get the power of esbuild along with the convenience of tsup. We, at refine, have seen remarkable performance using tsup in our project dev/build processes. 
 
 ## Conclusion 
 The world of JavaScript has a lot of great frameworks and tools. You will see many bundlers in the market, but esbuild is gaining a lot of popularity due to its amazing speed. In this article, we compared some top bundlers being used. We also discussed some of the core features of esbuild and how it delivers blazing-fast builds. 
