docs(blog): update banner title

--- a/documentation/blog/2022-11-09-nvm.md
+++ b/documentation/blog/2022-11-09-nvm.md
@@ -121,7 +121,7 @@ See mine above, as you can see I have nvm version 0.35.3 on my machine.
 
 ---
 
-<PromotionBanner title="Is your CRUD app overloaded with technical debt?" image="/img/mui_banner.png" />
+<PromotionBanner title="Is your CRUD app overloaded with technical debt?" image="/img/generic_banner.png" />
 
 ---
 
