fix(docs): change dobule quote to backquote

--- a/documentation/docs/further-readings/telemetry.mdx
+++ b/documentation/docs/further-readings/telemetry.mdx
@@ -31,11 +31,11 @@ There are no consequent requests for that session, as we do NOT collect any beha
 
 The HTTP call has a JSON payload having the following application-specific attributes:
 
-| Value         | Type      | Description                                                                                                     |
-| ------------- | --------- | --------------------------------------------------------------------------------------------------------------- |
-| providers     | boolean[] | List of providers used in the project (auth, data, router, live, notification, auditLog, i18n or accessControl) |
-| version       | string    | Version of the refine package.                                                                                  |
-| resourceCount | number    | Number of total resources.                                                                                      |
+| Value         | Type        | Description                                                                                                     |
+| ------------- | ---------   | --------------------------------------------------------------------------------------------------------------- |
+| providers     | `boolean[]` | List of providers used in the project (auth, data, router, live, notification, auditLog, i18n or accessControl) |
+| version       | `string`    | Version of the refine package.                                                                                  |
+| resourceCount | `number`    | Number of total resources.                                                                                      |
 
 Additionally, the following information is extracted and collected from the HTTP header:
 
@@ -58,15 +58,15 @@ After `refine cli` runs a command, a single HTTP request is sent to <a target="_
 
 ## What is collected?
 
-| Value            | Type                                        | Description                                                  |
-| ---------------- | ------------------------------------------- | ------------------------------------------------------------ |
-| nodeEnv          | string                                      | Specifies the environment in which an application is running |
-| nodeVersion      | string                                      | Installed Node.js version.                                   |
-| os               | string                                      | Operating system name.                                       |
-| osVersion        | string                                      | Operating system version.                                    |
-| command          | string                                      | Running script name.                                         |
-| packages         | { "name": "string", "version": "string" }[] | Installed `refine` packages.                                 |
-| projectFramework | string                                      | Installed "react" framework.                                 |
+| Value            | Type                                            | Description                                                  |
+| ---------------- | -------------------------------------------     | ------------------------------------------------------------ |
+| nodeEnv          | `string`                                        | Specifies the environment in which an application is running |
+| nodeVersion      | `string`                                        | Installed Node.js version.                                   |
+| os               | `string`                                        | Operating system name.                                       |
+| osVersion        | `string`                                        | Operating system version.                                    |
+| command          | `string`                                        | Running script name.                                         |
+| packages         | `{ "name": "string", "version": "string" }[]`   | Installed `refine` packages.                                 |
+| projectFramework | `string`                                        | Installed `react` framework.                                 |
 
 Additionally, the following information is extracted and collected from the HTTP header:
 
